fix: Gui spacing and color

--- a/gui/admin-system.css
+++ b/gui/admin-system.css
@@ -9,7 +9,7 @@ app-label {
         font-weight: bold;
 }
 
-outlined-button {
+.outlined_button {
         padding: 5px 10px;
         font-weight: bold;
         border-radius: 5px;
@@ -18,16 +18,16 @@ outlined-button {
         transition: background-color 200ms ease, border-color 150ms ease, transform 150ms ease;
 }
 
-outlined-button:hover {
-        background-color: #3c3c3c;
-}
+/*.outlined_button:hover {*/
+/*        background-color: #3c3c3c;*/
+/*}*/
 
-outlined-button:active {
+.outlined_button:active {
         background-color: #1a75ff;
         transform: scale(0.96);
 }
 
-save-button {
+save_button {
         padding: 5px 10px;
         font-weight: bold;
         border-radius: 5px;
@@ -36,13 +36,21 @@ save-button {
         transition: background-color 200ms ease, border-color 150ms ease, transform 150ms ease;
 }
 
-save-button:hover {
+save_button:hover {
         background-color: #3c3c3c;
 }
 
-save-button:active {
+save_button:active {
         background-color: #1a75ff;
         transform: scale(0.96);
+}
+
+.add_button {
+        box-shadow: 0px 0px 1px 1px rgba(0, 102, 255, 0.2);
+}
+
+.delete_button {
+        box-shadow: 0px 0px 1px 1px rgba(0, 102, 255, 0.2);
 }
 
 listview {
@@ -55,4 +63,24 @@ columnview {
         padding: 5px 10px;
         font-weight: bold;
         border-radius: 10px;
+}
+
+.search_bar {
+	min-width: 300px;
+	margin-left: 30px;
+	margin-right: 20px;
+        font-weight: bold;
+        border-radius: 5px;
+        box-shadow: inset 0px 0px 1px 1px rgba(251, 153, 2, 0.2);
+}
+
+.search_bar:focus-within {
+	outline: none;
+	box-shadow: 0px 0px 2px 2px rgba(251, 153, 2, 0.2);
+}
+
+app_label {
+        color: #FB9902;
+	font-size: 20px;
+	font-weight: bold;
 }
